# Projet-S5

./: .gitignore  README.md
Livrables/: CalculTaRoute.m  CalculTaRoute.py
Livrables/Calcul ta route/: CalculTaRoute.py  calcul_ta_route.Rmd  calcul_ta_route.html  calcul_ta_route.md
Livrables/Filtre tes connaissances/: Filtre tes connaissances.Rmd  Filtre-tes-connaissances.docx  Filtre-tes-connaissances.html
Livrables/Teste ta confiance/: Teste ta confiance.Rmd
Livrables/data/: donnees_detecteur_obstacle(more).csv  donnees_detecteur_obstacle.xlsx  model_knn.rds
Modèles/Ressources/: Assemblage.ASMDOT  Mise en plan.DRWDOT  Pièce.PRTDOT
Sources/Godot projet-s5/: project.godot  (+1 more)
Sources/S5i-Projet-Client/: .gitignore  README.md  main.py  pyproject.toml
Sources/S5i-Projet-Client/configs/: line_follower.json  motors.json  obstacle_avoidance.json  real-motors.json  sonar.json
Sources/S5i-Projet-Client/src/: json_encoder.py  json_helper.py
Sources/S5i-Projet-Client/src/constants/: __init__.py  configs.py  files.py  network.py  obstacle.py
Sources/S5i-Projet-Client/src/enums/: __init__.py  direction.py  hosts.py  run_states.py  states.py
Sources/S5i-Projet-Client/src/json/: __init__.py  json_helper.py
Sources/S5i-Projet-Client/src/loops/: __init__.py  base_loop.py  calib_loop.py  main_loop.py  reverse_loop.py  test_loop.py
Sources/S5i-Projet-Client/src/models/: __init__.py  configs.py  responses.py
Sources/S5i-Projet-Client/src/modules/: __init__.py  line_follower.py  motors.py  obstacle_avoidance.py  time.py
Sources/S5i-Projet-Client/src/ws/: client.py
(+98 files in other folders)
